--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
 <body>
     <!-- navbar header -->
+
     <nav class="navbar navbar-expand-lg primary-bg-color py-4 px-2" id="navbar">
         <div class="container">
             <a href="#" class="navbar-brand">ExactTime</a>
@@ -60,8 +61,11 @@
             </div>
         </div>
     </nav>
+
     <!-- end navbar header -->
+
     <!-- navbar -->
+
     <nav class="navbar navbar-expand-lg secondary-bg-color p-2" id="bottom-navbar-container">
         <div class="container">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#bottom-navbar"
@@ -87,8 +91,309 @@
             </ul>
         </div>
     </nav>
+
     <!-- end navbar -->
 
+    <!-- banners -->
+
+    <div class="container" id="banners-container">
+        <div class="carousel slide" data-bs-ride="carousel" id="slider">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="img/banner1.jpg" alt="#" class="d-block w-100 img-fluid">
+                    <div class="carousel-caption primary-bg-color">
+                        <h5>Relógios Nacionais</h5>
+                        <p>Veja as horas com estilo.</p>
+                    </div>
+                </div>
+                <div class="carousel-item active">
+                    <img src="img/banner3.jpg" alt="#" class="d-block w-100 img-fluid">
+                    <div class="carousel-caption primary-bg-color">
+                        <h5>Linha Importada</h5>
+                        <p>Os melhores relógios suiços estão aqui!</p>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#slider" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true">
+                    <span class="visualy-hidden"></span>
+                </span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#slider" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true">
+                    <span class="visualy-hidden"></span>
+                </span>
+            </button>
+        </div>
+
+        <!-- mini banners -->
+
+        <div class="container" id="mini-banners">
+            <div class="row justify-content-around">
+                <div class="col-12 dark-bg-color" id="mini-banner-1">
+                    <h2>Nova coleção</h2>
+                    <img src="img/relogio1.png" alt="">
+                    <a href="">Compre Agora!</a>
+                </div>
+                <div class="col-12 secondary-bg-color" id="mini-banner-2">
+                    <h2>Modelos em promoção</h2>
+                    <img src="img/relogio2.png" alt="">
+                    <a href="">Compre Agora!</a>
+                </div>
+                <div class="col-12 light-bg-color" id="mini-banner-3">
+                    <h2 class="secondary-color">Edição limitada</h2>
+                    <img src="img/relogio3.png" alt="">
+                    <a href="">Compre Agora!</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- end mini banners -->
+
+    </div>
+
+    <!-- end banners -->
+
+    <!-- best sellers -->
+    <div class="container" id="best-sellers">
+        <h2 class="title primary-color">Mais Vendidos</h2>
+        <div class="row">
+            <div class="col-12 col-md-3">
+                <div class="card primary-bg-color">
+                    <img class="card-img-top img-fluid" src="img/relogio4.png" alt="">
+                    <div class="card-body">
+                        <p class="card-category secondary-color">Relógio</p>
+                        <h5 class="card-title">Tommy Hilfiger 1791</h5>
+                        <p class="card-text primary-color">R$975,89</p>
+                        <a href="" class="btn btn-primary">Comprar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-3">
+                <div class="card primary-bg-color">
+                    <img class="card-img-top img-fluid" src="img/relogio5.png" alt="">
+                    <div class="card-body">
+                        <p class="card-category secondary-color">Relógio</p>
+                        <h5 class="card-title">Akimum E1-ATM</h5>
+                        <p class="card-text primary-color">R$1368,89</p>
+                        <a href="" class="btn btn-primary">Comprar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-3">
+                <div class="card primary-bg-color">
+                    <img class="card-img-top img-fluid" src="img/relogio6.png" alt="">
+                    <div class="card-body">
+                        <p class="card-category secondary-color">Relógio</p>
+                        <h5 class="card-title">Lacoste Y Series</h5>
+                        <p class="card-text primary-color">R$468,89</p>
+                        <a href="" class="btn btn-primary">Comprar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-3">
+                <div class="card primary-bg-color">
+                    <img class="card-img-top img-fluid" src="img/relogio7.png" alt="">
+                    <div class="card-body">
+                        <p class="card-category secondary-color">Relógio</p>
+                        <h5 class="card-title">Nautica Electro</h5>
+                        <p class="card-text primary-color">R$2789,89</p>
+                        <a href="" class="btn btn-primary">Comprar</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- end best sellers -->
+
+    <!-- banner destaque -->
+
+    <div class="container-fluid" id="bottom-banner">
+        <div class="row">
+            <div class="col-12 col-md-8">
+                <p class="primary-color offer-subtitle">Descontos de até 75%</p>
+                <h2 class="light-color">TAG Heuer Uhrzeit</h2>
+                <p class="secondary-color">Relógio para amantes do automobilismo</p>
+                <a href="" class="btn btn-primary">Saiba mais</a>
+            </div>
+            <div class="col-12 col-md-4">
+                <img src="img/relogio8.png" alt="">
+            </div>
+        </div>
+    </div>
+
+    <!-- end banner destaque -->
+
+    <!-- produtos novos -->
+    <div class="container" id="new-products">
+        <h2 class="title primary-color">Novidades</h2>
+        <div class="row">
+            <div class="col-12 col-xl-3 d-none d-md-flex" id="new-products-banner">
+                <p class="secondary-color">Os melhores</p>
+                <h3>Relógios</h3>
+                <p class="primary-color">pelos melhores preços</p>
+            </div>
+            <div class="col-12 col-xl-9">
+                <div class="row">
+                    <div class="col-12 col-md-4">
+                        <div class="card primary-bg-color">
+                            <img class="card-img-top img-fluid" src="img/relogio8.png" alt="">
+                            <div class="card-body">
+                                <p class="card-category secondary-color">Relógio</p>
+                                <h5 class="card-title">Hugo Revelations</h5>
+                                <p class="card-text primary-color">R$789,89</p>
+                                <a href="" class="btn btn-primary">Comprar</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <div class="card primary-bg-color">
+                            <img class="card-img-top img-fluid" src="img/relogio4.png" alt="">
+                            <div class="card-body">
+                                <p class="card-category secondary-color">Relógio</p>
+                                <h5 class="card-title">Cassio Modern-K</h5>
+                                <p class="card-text primary-color">R$2239,89</p>
+                                <a href="" class="btn btn-primary">Comprar</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <div class="card primary-bg-color">
+                            <img class="card-img-top img-fluid" src="img/relogio6.png" alt="">
+                            <div class="card-body">
+                                <p class="card-category secondary-color">Relógio</p>
+                                <h5 class="card-title">TAG Heuer F1</h5>
+                                <p class="card-text primary-color">R$468,89</p>
+                                <a href="" class="btn btn-primary">Comprar</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <div class="card primary-bg-color">
+                            <img class="card-img-top img-fluid" src="img/relogio2.png" alt="">
+                            <div class="card-body">
+                                <p class="card-category secondary-color">Relógio</p>
+                                <h5 class="card-title">Rolex Diamond</h5>
+                                <p class="card-text primary-color">R$999,89</p>
+                                <a href="" class="btn btn-primary">Comprar</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <div class="card primary-bg-color">
+                            <img class="card-img-top img-fluid" src="img/relogio5.png" alt="">
+                            <div class="card-body">
+                                <p class="card-category secondary-color">Relógio</p>
+                                <h5 class="card-title">The Cake</h5>
+                                <p class="card-text primary-color">R$527,89</p>
+                                <a href="" class="btn btn-primary">Comprar</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <div class="card primary-bg-color">
+                            <img class="card-img-top img-fluid" src="img/relogio1.png" alt="">
+                            <div class="card-body">
+                                <p class="card-category secondary-color">Relógio</p>
+                                <h5 class="card-title">Is a Lie</h5>
+                                <p class="card-text primary-color">R$689,89</p>
+                                <a href="" class="btn btn-primary">Comprar</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- end produtos novos -->
+
+    <!-- gallery -->
+
+    <div class="container-fluid" id="gallery">
+        <div class="row">
+            <div class="col-6 col-md-2 img-container" id="insta1"></div>
+            <div class="col-6 col-md-2 img-container" id="insta2"></div>
+            <div class="col-6 col-md-2 img-container" id="insta3"></div>
+            <div class="col-6 col-md-2 img-container" id="insta4"></div>
+            <div class="col-6 col-md-2 img-container" id="insta5"></div>
+            <div class="col-6 col-md-2 img-container" id="insta6"></div>
+        </div>
+    </div>
+
+    <!-- end gallery -->
+
+    <!-- footer -->
+
+    <footer id="footer">
+        <div class="container-fluid" id="footer-links-container">
+            <div class="row">
+                <div class="col-12 col-md-4 footer-column">
+                    <h3>Páginas</h3>
+                    <ul class="list-unstyled">
+                        <li class="mb-2">
+                            <a href="#" class="secondary-color">Home</a>
+                        </li>
+                        <li class="mb-2">
+                            <a href="#" class="secondary-color">Produtos</a>
+                        </li>
+                        <li class="mb-2">
+                            <a href="#" class="secondary-color">Promoções</a>
+                        </li>
+                        <li class="mb-2">
+                            <a href="#" class="secondary-color">Blog</a>
+                        </li>
+                        <li class="mb-2">
+                            <a href="#" class="secondary-color">Contato</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-12 col-md-4 footer-column" id="footer-center">
+                    <h3>ExactTime</h3>
+                    <p class="secondary-color">Alguma dúvida? Ligue para nós</p>
+                    <p class="store-phone"><i class="bi bi-telephone"></i> (31) 9 7457-7777</p>
+                </div>
+                <div class="col-12 col-md-4 footer-column">
+                    <h3>Informações</h3>
+                    <ul class="list-unstyled">
+                        <li class="mb-2">
+                            <a href="#" class="secondary-color">Política de privacidade</a>
+                        </li>
+                        <li class="mb-2">
+                            <a href="#" class="secondary-color">Política de Entrega</a>
+                        </li>
+                        <li class="mb-2">
+                            <a href="#" class="secondary-color">Rastreie seu Pedido</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid" id="newsletter-container">
+            <div class="col-12">
+                <div class="row">
+                    <p class="secondary-color text">Receber e-mails promocionais</p>
+                    <form class="d-flex" id="news-form">
+                        <i class="bi bi-envelope primary-color"></i>
+                        <input type="email" class="form-control me-2" placeholder="Insira seu e-mail">
+                        <button class="btn secondary-bg-color" type="submit">Enviar</button>
+                    </form>
+                </div>
+            </div>
+            <div class="col-12" id="social-container">
+                <i class="bi bi-facebook"></i>
+                <i class="bi bi-instagram"></i>
+                <i class="bi bi-youtube"></i>
+                <i class="bi bi-twitter"></i>
+            </div>
+        </div>
+        <div class="container" id="copy-container">
+            <p>Criado por<span> <a href="https://joaoguimaraes.com" target="_blank">João Vitor Guimarães</a></span>  </p>
+        </div>
+    </footer>
+
+    <!-- end footer -->
 
 
 
